# tantivy-search

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/tantivy_search/: chunking.py  cli.py  config.py  index.py  mcp_server.py  schema.py  search.py
tests/: conftest.py  test_chunking.py  test_config.py  test_index.py  test_list_repos.py  test_search.py
